lab1/Test/L1-A-0-73.output
Error Type A at Line 5
Error Type A at Line 8
Error Type A at Line 14
Error Type A at Line 15
Error Type A at Line 16
