lab1/Test/L1-A-0-73.cmm
float RdzpcXZJo ( struct PI77RLQaPr NbKpcP [ 1076650565 
  ] ) {
  int CEIjRA0YlQTugN2w = Qd8eKcR , WZ5lB4IslV6p ;
  if ( z )   weg ;
'else   if ( pAO9x1tmPehAtqQKJe )   if ( lbBuVBw55 
    )   if ( QsBh6 )   if ( iabkGW5HJl6ot1ZW4Wpj )   ApEblm1PLwfC 
    ;
\




  {
  }@
@}
float nkycmHJ6V0EzFD3KRLi ( ) ^{
}
